added helpers, modified views, reviewed modles, index.html, etc.

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Console Blog</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto+Serif:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,500&display=swap" rel="stylesheet">
@@ -55,7 +55,6 @@
           <div id="dropdownContent" class="dropdownContent" value="hidden">
             <ul>
               <li class="dropItem"><a href="/" class="dropLink">Home</a></li>
-              <li class="dropItem"><a href="/dashboard" class="dropLink">Dashboard</a></li>
               <li class="dropItem"><a href="/profile"  class="dropLink">Profile</a></li>
               <li class="dropItem"><a href="/posts" class="dropLink">Posts</a></li>
 
@@ -86,7 +85,7 @@
         <ul>
             <li>
                 <div class="blinkContainer"> 
-                  <a href="/dashboard">Dashboard</a>
+                 <a href="/" class="dropLink">Home</a>
                   <div class="blinkHover">
                 </div>
               </div>
