tried fixing homeRoutes to redirect to proper partials, added thankyou page handlebars

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -65,8 +65,8 @@
     </header>
 
   <main>
-      <!-- Render the sub layout -->
-      <!-- {{{ body }}} -->
+       Render the sub layout 
+      {{{ body }}} 
       <div class="gridbox"></div>
       <div class="gridbox"></div>
       <div class="gridbox"></div>
@@ -106,13 +106,13 @@
             </li>
         </ul>
     </footer>
-      <!-- Render script for logged in users only -->
-  <!-- {{#if logged_in}} -->
+      Render script for logged in users only 
+ {{#if logged_in}} 
 
   <script src="/js/logout.js"></script>
   
 
-  <!-- {{/if}} -->
+  {{/if}}
 </body>
 
-</html>
+</html> -->
